--- a/lighthouse-core/lib/i18n/locales/en-US.json
+++ b/lighthouse-core/lib/i18n/locales/en-US.json
@@ -1955,144 +1955,6 @@
   "lighthouse-core/lib/lh-error.js | urlInvalid": {
     "message": "The URL you have provided appears to be invalid."
   },
-  "lighthouse-report/renderer/util.js | calculatorLink": {
-    "message": "See calculator."
-  },
-  "lighthouse-report/renderer/util.js | crcInitialNavigation": {
-    "message": "Initial Navigation"
-  },
-  "lighthouse-report/renderer/util.js | crcLongestDurationLabel": {
-    "message": "Maximum critical path latency:"
-  },
-  "lighthouse-report/renderer/util.js | dropdownCopyJSON": {
-    "message": "Copy JSON"
-  },
-  "lighthouse-report/renderer/util.js | dropdownDarkTheme": {
-    "message": "Toggle Dark Theme"
-  },
-  "lighthouse-report/renderer/util.js | dropdownPrintExpanded": {
-    "message": "Print Expanded"
-  },
-  "lighthouse-report/renderer/util.js | dropdownPrintSummary": {
-    "message": "Print Summary"
-  },
-  "lighthouse-report/renderer/util.js | dropdownSaveGist": {
-    "message": "Save as Gist"
-  },
-  "lighthouse-report/renderer/util.js | dropdownSaveHTML": {
-    "message": "Save as HTML"
-  },
-  "lighthouse-report/renderer/util.js | dropdownSaveJSON": {
-    "message": "Save as JSON"
-  },
-  "lighthouse-report/renderer/util.js | dropdownViewer": {
-    "message": "Open in Viewer"
-  },
-  "lighthouse-report/renderer/util.js | errorLabel": {
-    "message": "Error!"
-  },
-  "lighthouse-report/renderer/util.js | errorMissingAuditInfo": {
-    "message": "Report error: no audit information"
-  },
-  "lighthouse-report/renderer/util.js | footerIssue": {
-    "message": "File an issue"
-  },
-  "lighthouse-report/renderer/util.js | labDataTitle": {
-    "message": "Lab Data"
-  },
-  "lighthouse-report/renderer/util.js | lsPerformanceCategoryDescription": {
-    "message": "[Lighthouse](https://developers.google.com/web/tools/lighthouse/) analysis of the current page on an emulated mobile network. Values are estimated and may vary."
-  },
-  "lighthouse-report/renderer/util.js | manualAuditsGroupTitle": {
-    "message": "Additional items to manually check"
-  },
-  "lighthouse-report/renderer/util.js | notApplicableAuditsGroupTitle": {
-    "message": "Not applicable"
-  },
-  "lighthouse-report/renderer/util.js | opportunityResourceColumnLabel": {
-    "message": "Opportunity"
-  },
-  "lighthouse-report/renderer/util.js | opportunitySavingsColumnLabel": {
-    "message": "Estimated Savings"
-  },
-  "lighthouse-report/renderer/util.js | passedAuditsGroupTitle": {
-    "message": "Passed audits"
-  },
-  "lighthouse-report/renderer/util.js | runtimeDesktopEmulation": {
-    "message": "Emulated Desktop"
-  },
-  "lighthouse-report/renderer/util.js | runtimeMobileEmulation": {
-    "message": "Emulated Moto G4"
-  },
-  "lighthouse-report/renderer/util.js | runtimeNoEmulation": {
-    "message": "No emulation"
-  },
-  "lighthouse-report/renderer/util.js | runtimeSettingsAxeVersion": {
-    "message": "Axe version"
-  },
-  "lighthouse-report/renderer/util.js | runtimeSettingsBenchmark": {
-    "message": "CPU/Memory Power"
-  },
-  "lighthouse-report/renderer/util.js | runtimeSettingsChannel": {
-    "message": "Channel"
-  },
-  "lighthouse-report/renderer/util.js | runtimeSettingsCPUThrottling": {
-    "message": "CPU throttling"
-  },
-  "lighthouse-report/renderer/util.js | runtimeSettingsDevice": {
-    "message": "Device"
-  },
-  "lighthouse-report/renderer/util.js | runtimeSettingsFetchTime": {
-    "message": "Fetch Time"
-  },
-  "lighthouse-report/renderer/util.js | runtimeSettingsNetworkThrottling": {
-    "message": "Network throttling"
-  },
-  "lighthouse-report/renderer/util.js | runtimeSettingsTitle": {
-    "message": "Runtime Settings"
-  },
-  "lighthouse-report/renderer/util.js | runtimeSettingsUA": {
-    "message": "User agent (host)"
-  },
-  "lighthouse-report/renderer/util.js | runtimeSettingsUANetwork": {
-    "message": "User agent (network)"
-  },
-  "lighthouse-report/renderer/util.js | runtimeSettingsUrl": {
-    "message": "URL"
-  },
-  "lighthouse-report/renderer/util.js | runtimeUnknown": {
-    "message": "Unknown"
-  },
-  "lighthouse-report/renderer/util.js | showRelevantAudits": {
-    "message": "Show audits relevant to:"
-  },
-  "lighthouse-report/renderer/util.js | snippetCollapseButtonLabel": {
-    "message": "Collapse snippet"
-  },
-  "lighthouse-report/renderer/util.js | snippetExpandButtonLabel": {
-    "message": "Expand snippet"
-  },
-  "lighthouse-report/renderer/util.js | thirdPartyResourcesLabel": {
-    "message": "Show 3rd-party resources"
-  },
-  "lighthouse-report/renderer/util.js | throttlingProvided": {
-    "message": "Provided by environment"
-  },
-  "lighthouse-report/renderer/util.js | toplevelWarningsMessage": {
-    "message": "There were issues affecting this run of Lighthouse:"
-  },
-  "lighthouse-report/renderer/util.js | varianceDisclaimer": {
-    "message": "Values are estimated and may vary. The [performance score is calculated](https://web.dev/performance-scoring/) directly from these metrics."
-  },
-  "lighthouse-report/renderer/util.js | viewTreemapLabel": {
-    "message": "View Treemap"
-  },
-  "lighthouse-report/renderer/util.js | warningAuditsGroupTitle": {
-    "message": "Passed audits but with warnings"
-  },
-  "lighthouse-report/renderer/util.js | warningHeader": {
-    "message": "Warnings: "
-  },
   "lighthouse-treemap/app/src/util.js | allLabel": {
     "message": "All"
   },
@@ -2380,5 +2242,143 @@
   },
   "node_modules/lighthouse-stack-packs/packs/wordpress.js | uses-text-compression": {
     "message": "You can enable text compression in your web server configuration."
+  },
+  "report/renderer/util.js | calculatorLink": {
+    "message": "See calculator."
+  },
+  "report/renderer/util.js | crcInitialNavigation": {
+    "message": "Initial Navigation"
+  },
+  "report/renderer/util.js | crcLongestDurationLabel": {
+    "message": "Maximum critical path latency:"
+  },
+  "report/renderer/util.js | dropdownCopyJSON": {
+    "message": "Copy JSON"
+  },
+  "report/renderer/util.js | dropdownDarkTheme": {
+    "message": "Toggle Dark Theme"
+  },
+  "report/renderer/util.js | dropdownPrintExpanded": {
+    "message": "Print Expanded"
+  },
+  "report/renderer/util.js | dropdownPrintSummary": {
+    "message": "Print Summary"
+  },
+  "report/renderer/util.js | dropdownSaveGist": {
+    "message": "Save as Gist"
+  },
+  "report/renderer/util.js | dropdownSaveHTML": {
+    "message": "Save as HTML"
+  },
+  "report/renderer/util.js | dropdownSaveJSON": {
+    "message": "Save as JSON"
+  },
+  "report/renderer/util.js | dropdownViewer": {
+    "message": "Open in Viewer"
+  },
+  "report/renderer/util.js | errorLabel": {
+    "message": "Error!"
+  },
+  "report/renderer/util.js | errorMissingAuditInfo": {
+    "message": "Report error: no audit information"
+  },
+  "report/renderer/util.js | footerIssue": {
+    "message": "File an issue"
+  },
+  "report/renderer/util.js | labDataTitle": {
+    "message": "Lab Data"
+  },
+  "report/renderer/util.js | lsPerformanceCategoryDescription": {
+    "message": "[Lighthouse](https://developers.google.com/web/tools/lighthouse/) analysis of the current page on an emulated mobile network. Values are estimated and may vary."
+  },
+  "report/renderer/util.js | manualAuditsGroupTitle": {
+    "message": "Additional items to manually check"
+  },
+  "report/renderer/util.js | notApplicableAuditsGroupTitle": {
+    "message": "Not applicable"
+  },
+  "report/renderer/util.js | opportunityResourceColumnLabel": {
+    "message": "Opportunity"
+  },
+  "report/renderer/util.js | opportunitySavingsColumnLabel": {
+    "message": "Estimated Savings"
+  },
+  "report/renderer/util.js | passedAuditsGroupTitle": {
+    "message": "Passed audits"
+  },
+  "report/renderer/util.js | runtimeDesktopEmulation": {
+    "message": "Emulated Desktop"
+  },
+  "report/renderer/util.js | runtimeMobileEmulation": {
+    "message": "Emulated Moto G4"
+  },
+  "report/renderer/util.js | runtimeNoEmulation": {
+    "message": "No emulation"
+  },
+  "report/renderer/util.js | runtimeSettingsAxeVersion": {
+    "message": "Axe version"
+  },
+  "report/renderer/util.js | runtimeSettingsBenchmark": {
+    "message": "CPU/Memory Power"
+  },
+  "report/renderer/util.js | runtimeSettingsChannel": {
+    "message": "Channel"
+  },
+  "report/renderer/util.js | runtimeSettingsCPUThrottling": {
+    "message": "CPU throttling"
+  },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "Device"
+  },
+  "report/renderer/util.js | runtimeSettingsFetchTime": {
+    "message": "Fetch Time"
+  },
+  "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
+    "message": "Network throttling"
+  },
+  "report/renderer/util.js | runtimeSettingsTitle": {
+    "message": "Runtime Settings"
+  },
+  "report/renderer/util.js | runtimeSettingsUA": {
+    "message": "User agent (host)"
+  },
+  "report/renderer/util.js | runtimeSettingsUANetwork": {
+    "message": "User agent (network)"
+  },
+  "report/renderer/util.js | runtimeSettingsUrl": {
+    "message": "URL"
+  },
+  "report/renderer/util.js | runtimeUnknown": {
+    "message": "Unknown"
+  },
+  "report/renderer/util.js | showRelevantAudits": {
+    "message": "Show audits relevant to:"
+  },
+  "report/renderer/util.js | snippetCollapseButtonLabel": {
+    "message": "Collapse snippet"
+  },
+  "report/renderer/util.js | snippetExpandButtonLabel": {
+    "message": "Expand snippet"
+  },
+  "report/renderer/util.js | thirdPartyResourcesLabel": {
+    "message": "Show 3rd-party resources"
+  },
+  "report/renderer/util.js | throttlingProvided": {
+    "message": "Provided by environment"
+  },
+  "report/renderer/util.js | toplevelWarningsMessage": {
+    "message": "There were issues affecting this run of Lighthouse:"
+  },
+  "report/renderer/util.js | varianceDisclaimer": {
+    "message": "Values are estimated and may vary. The [performance score is calculated](https://web.dev/performance-scoring/) directly from these metrics."
+  },
+  "report/renderer/util.js | viewTreemapLabel": {
+    "message": "View Treemap"
+  },
+  "report/renderer/util.js | warningAuditsGroupTitle": {
+    "message": "Passed audits but with warnings"
+  },
+  "report/renderer/util.js | warningHeader": {
+    "message": "Warnings: "
   }
 }
