--- a/lighthouse-core/lib/i18n/locales/es-419.json
+++ b/lighthouse-core/lib/i18n/locales/es-419.json
@@ -588,7 +588,7 @@
     "message": "Gravedad"
   },
   "lighthouse-core/audits/csp-xss.js | description": {
-    "message": "Una Política de Seguridad del Contenido (CSP) potente reduce enormemente el riesgo de los ataques de secuencia de comandos entre sitios (XSS). [Más información](https://web.dev/strict-csp/)"
+    "message": "Una Política de Seguridad del Contenido (CSP) potente reduce enormemente el riesgo de los ataques de secuencia de comandos entre sitios (XSS). [Más información](https://web.dev/csp-xss/)"
   },
   "lighthouse-core/audits/csp-xss.js | itemSeveritySyntax": {
     "message": "Sintaxis"
@@ -903,10 +903,10 @@
     "message": "El manifiesto no contiene los campos \"name\" ni \"short_name\""
   },
   "lighthouse-core/audits/installable-manifest.js | manifest-missing-suitable-icon": {
-    "message": "El manifiesto no contiene un ícono adecuado. Se requiere un formato PNG, SVG o WebP de al menos {value0} px, se debe definir el atributo de tamaño y, si se establece el atributo de propósito, este deberá incluir \"any\" o \"maskable\"."
+    "message": "Manifest does not contain a suitable icon - PNG, SVG or WebP format of at least {value0} px is required, the sizes attribute must be set, and the purpose attribute, if set, must include \"any\"."
   },
   "lighthouse-core/audits/installable-manifest.js | no-acceptable-icon": {
-    "message": "Ninguno de los íconos proporcionados es de al menos {value0} px cuadrados en formato PNG, SVG o WebP"
+    "message": "No supplied icon is at least {value0} px square in PNG, SVG or WebP format, with the purpose attribute unset or set to \"any\""
   },
   "lighthouse-core/audits/installable-manifest.js | no-icon-available": {
     "message": "El ícono que se descargó estaba vacío o dañado"
@@ -2242,5 +2242,143 @@
   },
   "node_modules/lighthouse-stack-packs/packs/wordpress.js | uses-text-compression": {
     "message": "Puedes habilitar la compresión de texto en la configuración de tu servidor web."
+  },
+  "report/renderer/util.js | calculatorLink": {
+    "message": "Consulta la calculadora."
+  },
+  "report/renderer/util.js | crcInitialNavigation": {
+    "message": "Navegación inicial"
+  },
+  "report/renderer/util.js | crcLongestDurationLabel": {
+    "message": "Latencia de ruta crítica máxima:"
+  },
+  "report/renderer/util.js | dropdownCopyJSON": {
+    "message": "Copiar JSON"
+  },
+  "report/renderer/util.js | dropdownDarkTheme": {
+    "message": "Activar o desactivar el Tema oscuro"
+  },
+  "report/renderer/util.js | dropdownPrintExpanded": {
+    "message": "Se expandió la impresión"
+  },
+  "report/renderer/util.js | dropdownPrintSummary": {
+    "message": "Resumen de impresión"
+  },
+  "report/renderer/util.js | dropdownSaveGist": {
+    "message": "Guardar como Gist"
+  },
+  "report/renderer/util.js | dropdownSaveHTML": {
+    "message": "Guardar como HTML"
+  },
+  "report/renderer/util.js | dropdownSaveJSON": {
+    "message": "Guardar como JSON"
+  },
+  "report/renderer/util.js | dropdownViewer": {
+    "message": "Abrir en el lector"
+  },
+  "report/renderer/util.js | errorLabel": {
+    "message": "Error"
+  },
+  "report/renderer/util.js | errorMissingAuditInfo": {
+    "message": "Error del informe: No hay información de la auditoría"
+  },
+  "report/renderer/util.js | footerIssue": {
+    "message": "Informa sobre un problema"
+  },
+  "report/renderer/util.js | labDataTitle": {
+    "message": "Datos de prueba"
+  },
+  "report/renderer/util.js | lsPerformanceCategoryDescription": {
+    "message": "Análisis de [Lighthouse](https://developers.google.com/web/tools/lighthouse/) de la página actual en una red móvil emulada. Los valores son estimados y pueden variar."
+  },
+  "report/renderer/util.js | manualAuditsGroupTitle": {
+    "message": "Elementos adicionales que se deben comprobar manualmente"
+  },
+  "report/renderer/util.js | notApplicableAuditsGroupTitle": {
+    "message": "No aplicable"
+  },
+  "report/renderer/util.js | opportunityResourceColumnLabel": {
+    "message": "Oportunidad"
+  },
+  "report/renderer/util.js | opportunitySavingsColumnLabel": {
+    "message": "Ahorro estimado"
+  },
+  "report/renderer/util.js | passedAuditsGroupTitle": {
+    "message": "Auditorías aprobadas"
+  },
+  "report/renderer/util.js | runtimeDesktopEmulation": {
+    "message": "Escritorio emulado"
+  },
+  "report/renderer/util.js | runtimeMobileEmulation": {
+    "message": "Moto G4 emulado"
+  },
+  "report/renderer/util.js | runtimeNoEmulation": {
+    "message": "Sin emulación"
+  },
+  "report/renderer/util.js | runtimeSettingsAxeVersion": {
+    "message": "Versión de axe"
+  },
+  "report/renderer/util.js | runtimeSettingsBenchmark": {
+    "message": "Energía de la memoria/CPU"
+  },
+  "report/renderer/util.js | runtimeSettingsCPUThrottling": {
+    "message": "Limitación de la CPU"
+  },
+  "report/renderer/util.js | runtimeSettingsChannel": {
+    "message": "Canal"
+  },
+  "report/renderer/util.js | runtimeSettingsDevice": {
+    "message": "Dispositivo"
+  },
+  "report/renderer/util.js | runtimeSettingsFetchTime": {
+    "message": "Fecha de recuperación"
+  },
+  "report/renderer/util.js | runtimeSettingsNetworkThrottling": {
+    "message": "Limitación de la red"
+  },
+  "report/renderer/util.js | runtimeSettingsTitle": {
+    "message": "Configuración del tiempo de ejecución"
+  },
+  "report/renderer/util.js | runtimeSettingsUA": {
+    "message": "Usuario-agente (host)"
+  },
+  "report/renderer/util.js | runtimeSettingsUANetwork": {
+    "message": "Usuario-agente (red)"
+  },
+  "report/renderer/util.js | runtimeSettingsUrl": {
+    "message": "URL"
+  },
+  "report/renderer/util.js | runtimeUnknown": {
+    "message": "Desconocido"
+  },
+  "report/renderer/util.js | showRelevantAudits": {
+    "message": "Mostrar las auditorías relevantes para la métrica:"
+  },
+  "report/renderer/util.js | snippetCollapseButtonLabel": {
+    "message": "Contraer fragmento"
+  },
+  "report/renderer/util.js | snippetExpandButtonLabel": {
+    "message": "Expandir fragmento"
+  },
+  "report/renderer/util.js | thirdPartyResourcesLabel": {
+    "message": "Mostrar recursos de terceros"
+  },
+  "report/renderer/util.js | throttlingProvided": {
+    "message": "Proporcionado por el entorno"
+  },
+  "report/renderer/util.js | toplevelWarningsMessage": {
+    "message": "Algunos problemas afectaron la ejecución de Lighthouse:"
+  },
+  "report/renderer/util.js | varianceDisclaimer": {
+    "message": "Los valores son estimados y pueden variar. La [medición del rendimiento se calcula](https://web.dev/performance-scoring/) directamente a partir de estas métricas."
+  },
+  "report/renderer/util.js | viewTreemapLabel": {
+    "message": "Ver diagrama de árbol"
+  },
+  "report/renderer/util.js | warningAuditsGroupTitle": {
+    "message": "Auditorías aprobadas con advertencias"
+  },
+  "report/renderer/util.js | warningHeader": {
+    "message": "Advertencias: "
   }
 }
